# tta_devops_2506

my-app/: Dockerfile  pyproject.toml
my-app-cd/: my-app-deploy.yaml
