[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeong Won Ho",email = "wonho21@nate.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "unicorn (>=2.1.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
